<resources>
    <string name="app_name">Mp3Musica</string>
    <string name="image_of_song">Image Of Song</string>
    <string name="play_button">play button</string>
    <string name="more_option">more option</string>
    <string name="song">Song</string>
    <string name="all_songs">All Songs</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="total_time">Total time</string>
    <string name="current_time">Current time</string>
</resources>
