<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_color"
    tools:context="com.example.nitishkumar.mp3musica.SongPlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_weight="0.6">

        <ImageView
            android:id="@+id/albumImageView"
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/_10dp"
            android:src="@drawable/ic_music_note_black_24dp"
            android:layout_margin="@dimen/_20dp"
            android:contentDescription="@string/image_of_song" />
        <Button
            android:id="@+id/songlistBackButton"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/ic_list_black_24dp"
            android:layout_weight="0.2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_margin="@dimen/_5dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/song_name"
            android:textAlignment="center"
            android:padding="@dimen/_5dp"
            android:layout_margin="@dimen/_10dp"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_15sp"/>

        <TextView
            android:id="@+id/artistTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/artist_name"
            android:padding="@dimen/_5dp"
            android:layout_margin="@dimen/_10dp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@color/white_color"
            android:textSize="@dimen/_12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalSongTime"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/total_time"
                android:padding="@dimen/_5dp"
                android:textColor="@color/light_blue"/>

            <TextView
                android:id="@+id/currentSongTime"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/current_time"
                android:padding="@dimen/_5dp"
                android:textAlignment="textEnd"
                android:textColor="@color/light_blue"
                android:gravity="end" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/songSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:padding="@dimen/_5dp"
            android:background="#159753"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:padding="@dimen/_10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previousButton"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/ic_skip_previous_black_24dp"
                android:layout_gravity="end" />

            <Button
                android:id="@+id/palyPauseButton"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_play_arrow_black_24dp"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/ic_skip_next_black_24dp"
                android:layout_gravity="end" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>