<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/songListPlayPause">

        <ImageView
            android:id="@+id/imageOfSong"
            android:layout_width="@dimen/_55dp"
            android:layout_height="@dimen/_55dp"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/_10dp"
            android:background="@drawable/song_list_image_border"
            android:src="@drawable/ic_music_note_black_24dp"
            android:contentDescription="@string/image_of_song"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:padding="@dimen/_5dp"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_10dp">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sp"
                android:textColor="@color/black_color"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true" />

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sp"
                android:textStyle="italic"
                android:textColor="@color/dark_gray"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/songListMoreOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_25dp"
        android:layout_marginRight="@dimen/_10dp"
        android:background="@drawable/song_list_image_border"
        android:scaleType="centerCrop"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/more_option" />

    <ImageView
        android:id="@+id/songListPlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/song_list_image_border"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_toLeftOf="@id/songListMoreOption"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/_25dp"
        android:contentDescription="@string/play_button"
        android:layout_toStartOf="@id/songListMoreOption" />

</RelativeLayout>